[package]
name = "r2d2_sqlite"
version = "0.1.0"
license = "MIT"
description = "SQLite support for the r2d2 connection pool"
repository = "https://github.com/gwenn/r2d2-sqlite"
keywords = ["sqlite", "sql", "pool", "database"]

[dependencies]
r2d2 = "0.7.0"

[dependencies.rusqlite]
git = "https://github.com/gwenn/rusqlite.git"
branch = "r2d2"