[package]
name = "r2d2_sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SQLite support for the r2d2 connection pool"
repository = "https://github.com/gwenn/r2d2-sqlite"
keywords = ["sqlite", "sql", "pool", "database"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
r2d2 = "0.8.0"
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
